fixed bug in age script

--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
 
     <!-- age -->
     <section class="age-result">
-      <h2><span class="age-num" id="age-num">38</span>years</h2>
-      <h2><span class="age-num" id="months-left">3</span>months</h2>
-      <h2><span class="age-num" id="days-left">26</span>days</h2>
+      <h2><span class="age-num" id="age-num">--</span>years</h2>
+      <h2><span class="age-num" id="months-left">--</span>months</h2>
+      <h2><span class="age-num" id="days-left">--</span>days</h2>
     </section>
 
   </div>
